# xai-google-gemini

./: LICENSE  README.md  gemini_example.xircuits  google_gemini_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: gemini_example.xircuits
