[project]
name = "xai-google-gemini"
version = "0.5.0"
description = "A Xircuits component library for Google's Gemini API."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-google-gemini"
keywords = ["xircuits", "generative ai", "google", "gemini"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
default_example_path = "gemini_example.xircuits"
